# Background_Subtraction

./: CMakeLists.txt  README.md  bg_sub.cpp
