cmake_minimum_required(VERSION 2.8)
project( testTwo )
set(OpenCV_DIR /home/xiaojie/opencv-3.1.0/build)
find_package( OpenCV REQUIRED )
#set(OpenCV_INCLUDE_DIRS /home/xiaojie/opencv/opencv-3.1.0/lxj/include/opencv;/home/xiaojie/opencv/opencv-3.1.0/lxj/include)
include_directories( ${OpenCV_INCLUDE_DIRS} )
message("include: ${OpenCV_INCLUDE_DIRS}")
add_executable( testTwo bg_sub.cpp )
target_link_libraries( testTwo ${OpenCV_LIBS} )
message("libs: ${OpenCV_LIBS}")
